# alpha3d

./: .env.example  .gitignore  Cargo.toml  Dockerfile.backend  LICENSE  README.md  docker-compose.yml
deploy/gcp/: README.md  cloudbuild.yaml
deploy/gcp/cloudrun/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: RFS.md  TECHNICAL_SPEC.md  acceptance_tests.md  gcs_integration.md  git-branch-strategy.md  storage_config.md
frontend/: Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: GreetingCard.vue  StlViewer.vue
frontend/src/i18n/: index.js
frontend/src/lib/: apiClient.js
frontend/src/locales/: en.js  ko.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js  files.js
frontend/src/views/: AdminDashboard.vue  Login.vue  Orders.vue  Signup.vue  Upload.vue
frontend/tests/: admin.spec.js  stl-viewer.spec.js
migrations/: 20240101000000_init_schema.sql  20251120000000_seed_admin.sql
src/: analysis.rs  auth.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  quoting.rs  storage.rs
src/handlers/: admin.rs  files.rs  orders.rs  quoting.rs
test_uploads/: 54436299-ac3e-4fc0-a61a-288cadaa1414_cube.stl
tests/: acceptance.rs  acceptance_orders.rs  acceptance_quoting.rs  api_admin.rs  api_auth.rs  api_files.rs
